registry-with-authentication/registry-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: registry
  name: registry
spec:
  ports:
    - port: 5000
  selector:
    app: registry
  type: ClusterIP
